Added the increment function for the queue array

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,7 +30,7 @@
 	  </tr>
 		{{#each queuedata }}
 		<tr>
-			<td>{{@index}}</td>
+			<td>{{inc @index}}</td>
 			<td>{{lastname}}</td>
 			<td>{{firstname}}</td>
 			<td>{{email}}</td>
